--- a/.config/doom/config.org
+++ b/.config/doom/config.org
@@ -1,9 +1,17 @@
 #+TITLE:    Config
 #+AUTHOR:   Demis Balbach
 #+EMAIL:    db@minikn.xyz
-#+DATE:     <2021-01-03 So>
+#+PROPERTY: header-args:emacs-lisp :tangle yes :cache yes :results silent :padline no
+#+OPTIONS: toc:nil
+#+EXPORT_FILE_NAME: README.md
+
+#+BEGIN_SRC emacs-lisp
+;; -*- lexical-binding: t -*-
+#+END_SRC
 
 This is the main user configuration for my DOOM Emacs setup.
+
+#+MARKDOWN: [[_TOC_]]
 
 * General
 Place your private configuration here! Remember, you do not need to run 'doom
